examples/test/testpolicy1968.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1968
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key7: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value20
          key11: value19
          key25: value2
      podSelector:
        matchLabels:
          key13: value36
